--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,3 @@
-/* :root {
-  --primary: orange;
-} */
-
 .navbar {
   background: transparent;
   display: flex;
@@ -9,8 +5,8 @@
   align-items: center;
   height: 75px;
   width: 100%;
-  position: fixed;
-  top: 0;
+  /* position: fixed; */
+  /* top: 0; */
   z-index: 1;
   color: white;
 }
@@ -75,7 +71,6 @@ button.navbar__link {
 }
 
 .navbar__link:hover {
-  /* border-bottom: 3px solid #fff;*/
   transform: scale(1.1);
   color: var(--primary);
   transition: all 0.3s ease-out; 
