--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,10 @@
 .home {
-    height: 90vh;
+    height: 100%;
     font-size: 3rem;
+    padding-top: 60px;
 }
 
-.home {
+/* .home {
     background-image: url('../../../public/images/doggy.jpg');
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     background-size: cover;
@@ -11,4 +12,4 @@
     background-position: center;
     background-attachment: fixed;
     font-size: 100px;
-}
+} */
