--- a/src/pages/MyAccount/MyAccount.css
+++ b/src/pages/MyAccount/MyAccount.css
@@ -11,7 +11,7 @@
   /* border: 1px solid #ccc; */
   border-radius: 10px;
   /* background-color: #f9f9f9; */
-  background-color: antiquewhite;
+  background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
 }
@@ -34,8 +34,8 @@
 .myaccount__avatar>img {
   flex: 1;
   border-radius: 70%;
-  width: 170px;
-  height: 170px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   border: 2px solid #333;
 }
