Darkened the background

--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,11 @@
   background-color: var(--primary);
   color: #fff;
 }
+
+/* .body {
+  background: url('../public/images/doggy.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+} */
