--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,9 +15,9 @@ code {
     monospace;
 }
 
-html {
+body {
   background-image: url('../public/images/doggy.jpg');
-  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3); */
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
