--- a/src/pages/MyAccount/MyAccount.css
+++ b/src/pages/MyAccount/MyAccount.css
@@ -1,22 +1,23 @@
 .myaccount__container {
+  align-self: center;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 100px;
+  /* padding-top: 100px; */
 }
 
 .myaccount {
+  position: relative;
   width: 600px;
   height: 500px;
-  /* border: 1px solid #ccc; */
+  border: 1px solid #ccc;
   border-radius: 10px;
-  /* background-color: #f9f9f9; */
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.85);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-
 }
 
-.fl {
+.myaccount__data {
   width: 100%;
   display: flex;
 }
@@ -41,13 +42,19 @@
 }
 
 .myaccount>h2 {
-  margin-bottom: 7vh;
+  margin-bottom: 6vh;
   text-align: center;
 }
 
 .myaccount__info {
   flex: 1;
   padding-left: 10vh;
+  margin-left: 5vh;
+  margin-right: 10vh;
+  position: relative;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .myaccount label {
@@ -56,7 +63,7 @@
 }
 
 .myaccount__input {
-  width: 60%;
+  width: auto;
   padding: 8px;
   margin-bottom: 0.4rem;
   border: 1px solid #ccc;
@@ -65,10 +72,85 @@
 }
 
 .myaccount__inputvalue {
-  margin-bottom: 0.4rem;
+  margin-bottom: 1rem;
   color: #333333;
 }
 
 .myaccount button {
   margin-top: 10px;
+}
+
+.myaccount__avatar__change > img {
+  cursor: pointer;
+}
+
+.myaccount__logout {
+  position: absolute;
+  bottom: 1%;
+  /* left: 2%; */
+  left: 50%;
+  transform: translateX(-50%); 
+  color: red;
+  text-align: center;
+}
+
+.myaccount__delete {
+  position: absolute;
+  bottom: 1%;
+  right: 2%;
+  color: red;
+  cursor: pointer;
+  text-align: center;
+}
+
+.myaccount_passwordchange {
+  margin-top: 5vh;
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.myaccount_passwordchange > div {
+  display: inline;
+}
+
+/* .myaccount_passwordchange > div > label, .myaccount_passwordchange > div > input{
+  display: inline;
+} */
+
+@media screen and (max-width: 700px) {
+
+  .myaccount {
+    width: auto;
+    max-width: 90vw;
+    max-height: 80vh;
+    /* height: auto; */
+  }
+
+  .myaccount__input {
+    min-width: 10px;
+    max-width: 130px;
+    width: auto;
+  }
+
+  .myaccount_passwordchange > div > label, .myaccount_passwordchange > div > input{
+    display: block;
+  }
+
+  .myaccount_passwordchange {
+
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .myaccount__info{
+    padding-left: 0;
+    margin-right: 6vh;
+  }
+  
+  .myaccount__avatar {
+    padding-left: 2vh;
+  }
 }
