--- a/src/pages/Tasks/Tasks.css
+++ b/src/pages/Tasks/Tasks.css
@@ -1,4 +1,5 @@
 .tasks {
+    margin-top: 0.3rem;
     height: 100%;
     width: 100%;
     display: flex;
@@ -10,5 +11,5 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    width: 70%;
+    width: 50%;
 }
