Adding tasks in progress

--- a/src/pages/Tasks/Filters/Filters.css
+++ b/src/pages/Tasks/Filters/Filters.css
@@ -46,8 +46,18 @@
     padding-right: 20px;
 }
 
+.card__add_task {
+    max-height: 60vh;
+    height: auto;
+}
+
 .card__add_task > ul {
     list-style: none;
+}
+
+.card__add_task > ul > li {
+    background-color: white;
+    border-radius: 10px;
 }
 
 .card__add_task>p>b::after {
