--- a/src/pages/Tasks/Tasks.css
+++ b/src/pages/Tasks/Tasks.css
@@ -4,6 +4,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    gap: 20px;
     justify-content: center;
 }
 
@@ -12,5 +13,5 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    width: 50%;
+    width: 60%;
 }
