--- a/src/pages/Tasks/TaskContentControls/TaskContentControls.css
+++ b/src/pages/Tasks/TaskContentControls/TaskContentControls.css
@@ -1,10 +1,11 @@
-.filters {
-    max-height: 50vh;
+.card__filters {
+    max-height: 70vh;
     height: auto;
     width: 35vh;
-    background-color: rgba(255, 255, 255, 0.85);
+    padding: 7% 0;
+    /* background-color: rgba(255, 255, 255, 0.85); */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    /* border-radius: 10px; */
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
@@ -55,7 +56,7 @@
     flex-direction: column;
     max-height: 60vh;
     height: auto;
-    margin-bottom: 6%;
+    margin-bottom: 9%;
 }
 
 .card__add_task>ul {
@@ -99,14 +100,4 @@ select {
 option {
     text-align: center;
     width:50%;
-
-    /* background-color: lightgray;
-
-    color: lightgoldenrodyellow;
-
-    border: 1px solid #ccc;
-
-    padding: 5px; */
-
-
 }
