Changed task content controls styles

--- a/src/pages/Tasks/TaskContentControls/TaskContentControls.css
+++ b/src/pages/Tasks/TaskContentControls/TaskContentControls.css
@@ -45,7 +45,6 @@
 }
 
 .card__add_task>p>b {
-    cursor: pointer;
     position: relative;
     padding-right: 20px;
 }
@@ -56,7 +55,7 @@
     flex-direction: column;
     max-height: 60vh;
     height: auto;
-    margin-bottom: 9%;
+    margin-bottom: 2%;
 }
 
 .card__add_task>ul {
@@ -77,27 +76,36 @@
     transform: translateY(-50%);
 } */
 
-
-select {
-    margin-bottom: 6%;
-    width:20vh;
-}
-
 .card__add_task > p {
     margin-bottom: 2%;
 }
 
 .add_task__description {
     margin-bottom: 6%;
-    width:20vh;
+    width: 22vh;
+    border-radius: 5px;
 }
 
 .datepicker {
     margin-bottom: 6%;
-    width:20vh;
+    width: 22vh;
+    border-radius: 5px;
+}
+
+select {
+    margin-bottom: 6%;
+    width: 22vh;
+    height: 1.6rem;
+    border-radius: 5px;
 }
 
 option {
     text-align: center;
     width:50%;
+}
+
+select, option, .datepicker, .add_task__description {
+    padding: 4px;
+    border: 1px solid #ccc;
+    color: #333333;
 }
