--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 
 body {
   background-image: url('../public/images/doggy.jpg');
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
