Adding fetching data from server - Login and Registration

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -84,3 +84,15 @@ hr {
     text-decoration: underline; 
     cursor: pointer;
 }
+
+.login_form>form>p{
+margin-bottom: 2%;
+}
+
+.green {
+    color: green;
+}
+
+.red {
+    color: red;
+}
