--- a/client/src/components/Registration/Registration.css
+++ b/client/src/components/Registration/Registration.css
@@ -80,6 +80,10 @@ hr {
     padding: 0;
     margin: 0;
     font-size: inherit;
-    text-decoration: underline; 
+    text-decoration: underline;
     cursor: pointer;
+}
+
+.registration_form>form>p {
+    margin-bottom: 2%;
 }
