Fetching pets data for contentcontrols done

--- a/client/src/pages/Tasks/TaskContentControls/TaskContentControls.css
+++ b/client/src/pages/Tasks/TaskContentControls/TaskContentControls.css
@@ -109,3 +109,7 @@ select, option, .datepicker, .add_task__description {
     border: 1px solid #ccc;
     color: #333333;
 }
+
+.select + button {
+    margin-top: 3%;
+}
