--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ code {
 }
 
 body {
-  background-image: url('../public/images/doggy.jpg');
+  background-image: url('./assets/background.jpg');
   /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2); */
   background-size: cover;
   background-repeat: no-repeat;
