Changing user data done

--- a/client/src/pages/MyAccount/MyAccount.css
+++ b/client/src/pages/MyAccount/MyAccount.css
@@ -118,6 +118,7 @@
 .myaccount__passwordchange > button {
   display: block;
   width: 30%;
+  margin-bottom: 8px;
 }
 
 .myaccount__passwordchange__name {
