--- a/client/src/pages/MyAccount/MyAccount.css
+++ b/client/src/pages/MyAccount/MyAccount.css
@@ -20,6 +20,7 @@
 
 .myaccount__data {
   width: 100%;
+  height: 176px;
   display: flex;
 }
 
@@ -39,7 +40,7 @@
   width: 130px;
   height: 130px;
   object-fit: cover;
-  border: 2px solid #333;
+  /* border: 2px solid #333; */
 }
 
 .myaccount>h2 {
