--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,8 +16,8 @@ code {
 }
 
 body {
-  background-image: url('./assets/background.jpg');
-  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2); */
+  background-image: url('./assets/a4.jpg');
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
