--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,15 +1,37 @@
 .home {
     height: 100%;
+    color: white;
     font-size: 3rem;
-    /* padding-top: 60px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* .home {
-    background-image: url('../../../public/images/doggy.jpg');
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    font-size: 100px;
-} */
+.welcome__list_item {
+    font-size: 1.7rem;
+    margin-bottom: 30px;
+    margin-left: 10%;
+    list-style: none;
+    font-family: Nunito;
+}
+
+.welcome__title {
+    margin-bottom: 25px;
+    font-family: Nunito;
+}
+
+.welcome > button {
+    margin-top: 10px;
+    width: 200px;
+    align-self: center;
+}
+
+.welcome {
+    background-color: rgba(255, 255, 255, 0.15);
+    border-color: black;
+    border: 10px;
+    padding: 40px;
+    border-radius: 30px;
+    flex-direction: column;
+    display: flex;
+}
