--- a/client/src/pages/Tasks/Tasks.css
+++ b/client/src/pages/Tasks/Tasks.css
@@ -8,7 +8,7 @@
     justify-content: center;
 }
 
-.appointment_cards__container {
+.task_cards__container {
     display: flex;
     flex-direction: column;
     align-items: center;
