--- a/client/src/pages/Pets/Pets.css
+++ b/client/src/pages/Pets/Pets.css
@@ -1,11 +1,15 @@
 .pets {
-    margin-top: 2rem;
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 20px;
-    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.pets > b {
+    text-align: center;
 }
 
 .pet_cards__container {
@@ -14,4 +18,10 @@
     align-items: center;
     gap: 20px;
     width: 80%;
+}
+
+.pets__add {
+    position: absolute;
+    top: 7%;
+    left: 7%;
 }
