Pet status generating done

--- a/client/src/pages/Pets/PetCard/PetCard.css
+++ b/client/src/pages/Pets/PetCard/PetCard.css
@@ -67,3 +67,9 @@
 .pet_weight_diagram > h3 {
     text-align: center;
 }
+
+.pet_weight_diagram{
+    position: absolute;
+    top: 3%;
+    right: 9%;
+}
