--- a/client/src/pages/Pets/Pets.css
+++ b/client/src/pages/Pets/Pets.css
@@ -26,3 +26,16 @@
     left: 7%;
 }
 
+.pets__add_modal {
+    position: relative;
+    width: 20%;
+    height: 50%;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
