--- a/client/src/pages/Pets/PetCard/PetCard.css
+++ b/client/src/pages/Pets/PetCard/PetCard.css
@@ -4,7 +4,7 @@
     gap: 20px;
     width: 60%;
     height: auto;
-    max-height: 200px;
+    max-height: 230px;
 }
 
 .close_logo,
@@ -69,6 +69,8 @@
 
 .pet_weight_diagram{
     position: absolute;
-    top: 3%;
+    position: absolute;
+    top: 50%;
+    transform: translate(0%, -50%);
     right: 9%;
 }
